# spatial_nav

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_dir  example_slurm_wrapper.sh  general_funct.cpp  general_params.cpp  general_params_copy.cpp  generate_config_state.cpp  generate_config_state_copy.cpp  move_path.cpp  output  results
data/: ext_dir_initial_rot_r.cpp  general_params.cpp
data/rotations/: ext_dir_initial_0deg.cpp  ext_dir_initial_105deg.cpp  ext_dir_initial_10deg.cpp  ext_dir_initial_15deg.cpp  ext_dir_initial_25deg.cpp  ext_dir_initial_30deg.cpp  ext_dir_initial_35deg.cpp  ext_dir_initial_40size_35deg.cpp  ext_dir_initial_45deg.cpp  ext_dir_initial_55deg.cpp  (+4 more)
scripts/: activity_image_autocorr.m  activity_image_phys_spc_smooth.m  activity_movie_animate_spike_traj.m  activity_movie_nrn_spc.m  activity_movie_plot_spikes_group.asv  activity_movie_plot_spikes_group.m  activity_movie_volt_or_current.asv  activity_movie_volt_or_current.m  animal_location_colormap.mat  cells.mat  combine_movies.sh  combine_movies_run.sh  compare_spiking.m  create_blank_video.sh  demoOAT.m  filenames.mat  find_connectivity.m  find_spiking_distro_real.m  find_spiking_distro_sim.m  find_spiking_distro_sim.sh  fr_data.m  fr_data2.m  fr_data3.asv  fr_data3.m  highres_spikes.csv  initOAT.m  load_spike_times.m  neuron_space_colormap.mat  plot_fr_dists.m  plot_spikes_combined.m  plot_spikes_simple.asv  plot_spikes_simple.m  plot_volt_or_current.m  resize_ext_dir.m  resize_ext_dir_init.m  rotate_ext_dir_init.m  test_colormap.m  tetrodes.mat  videos
src/: main_gc_can_1.cpp
(+143 files in other folders)
